test(e2e): heavy UniFi OS Tier-2 harness — real authenticated CRUD round-trip
Replace the abandoned lean stack (mongo + standalone network-app + Caddy) with
the real UniFi OS Server image. The standalone Network app refuses the
Integration API (403, mode-refusal), so the only image that authenticates the
API is the heavy hieutq/unifi-os-server (pinned by digest). This makes Tier-2 an
offline/local tier (systemd + caps + host cgroup), not stock CI; Tier-1
(make test, make test-mock) stays the portable, zero-privilege gate.

- test/e2e/run.sh: one entrypoint — restore committed seed → boot heavy
  controller → gate on authenticated JSON → run e2e Go tests → always tear down.
- test/e2e/unifi-seed.tgz (git-lfs): a full uos_data snapshot (Mongo + the
  Postgres key secret + configs) so the minted X-API-Key validates on restore.
- test/e2e/mint/: one-off key-mint stack + runbook (manual first-run wizard).
- e2e_test.go: live data-source read + DnsARecord Create→Read→Diff→Delete.
- Fix run.sh unbound-variable crash on macOS bash 3.2 (empty ${arr[@]} under -u).
- Sync test/sdk/test_smoke.py to current codegen names (entity-prefix, de-pageify,
  singularization passes): Standard→WifiBroadcastStandard, ARecord→DnsARecord,
  get_wifi_broadcast_page→list_wifi_broadcasts, get_countrie→get_country, etc.

Full gate green: make test, test-mock, test-sdk (11/11), test-e2e (live).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>